--- a/leadership_calendar.html
+++ b/leadership_calendar.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Leadership Calendar — Discipleship Program (Aggregated)</title>
+<title>Leadership — Participants & Calendar (Aggregated)</title>
 <style>
   :root{
     --bg:#f7f9fc; --card:#ffffff; --ink:#111827; --muted:#6b7280; --shadow:0 8px 24px rgba(0,0,0,.06);
@@ -18,35 +18,33 @@
   .wrap{padding:0 24px 40px;max-width:1200px;margin:0 auto}
   .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:16px 16px 18px}
 
-  /* Controls */
-  .controls{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
-  select,button,input[type="search"]{border:1px solid #e5e7eb;border-radius:10px;padding:8px 10px;background:#fff;color:#111827}
-  input[type="search"]{min-width:220px}
-  button{cursor:pointer;font-weight:600}
-  .pill{font-size:12px;color:var(--muted)}
-
-  /* Leaderboard */
+  /* Leaderboard (no search; paginated) */
   .leaderbar{display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;gap:10px;flex-wrap:wrap}
-  .leadergrid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
-  @media (max-width:1024px){ .leadergrid{grid-template-columns:repeat(2,1fr)} }
-  @media (max-width:640px){ .leadergrid{grid-template-columns:1fr} }
-  .tile{
-    border:1px solid #e5e7eb;border-radius:14px;padding:12px;display:grid;grid-template-columns:auto 1fr auto;gap:10px;align-items:center;
+  .leadergrid{display:grid;grid-template-columns:1fr;gap:10px}
+  .row{
+    border:1px solid #e5e7eb;border-radius:14px;padding:10px 12px;display:grid;
+    grid-template-columns: auto 1fr auto;gap:12px;align-items:center;
   }
   .avatar{
     width:40px;height:40px;border-radius:50%;display:grid;place-items:center;
-    font-weight:800;color:#fff;background:linear-gradient(135deg,#64748b,#334155);
+    font-weight:800;color:#fff;background:linear-gradient(135deg,#64748b,#334155)
   }
-  .tmeta{font-size:12px;color:var(--muted)}
   .name{font-weight:700}
+  .meta{font-size:12px;color:var(--muted)}
   .bar{height:8px;border-radius:999px;background:#f1f5f9;overflow:hidden}
   .fill{height:100%;background:linear-gradient(90deg,#a5b4fc,#4f46e5)}
+  .right{ text-align:right }
   .pct{font-weight:800}
   .ratio{font-size:12px;color:#6b7280}
-  .badge{font-size:11px;border-radius:999px;border:1px solid #e5e7eb;padding:2px 8px;color:#374151;background:#fff}
+  .badge{font-size:11px;border-radius:999px;border:1px solid #e5e7eb;padding:2px 8px;color:#374151;background:#fff;display:inline-block;margin-top:4px}
   .ok{color:#065f46;border-color:#10b981;background:#e8f8ee}
   .warn{color:#92400e;border-color:#f59e0b;background:#fff7e6}
   .bad{color:#991b1b;border-color:#ef4444;background:#fdeaea}
+  .pager{display:flex;gap:8px;align-items:center}
+  .pager button, .pager select{
+    border:1px solid #e5e7eb;border-radius:10px;padding:6px 10px;background:#fff;cursor:pointer
+  }
+  .summary{font-size:12px;color:var(--muted)}
 
   /* Calendar */
   .calendar{margin-top:16px}
@@ -78,7 +76,6 @@
   dialog{border:none;border-radius:14px;box-shadow:0 24px 64px rgba(0,0,0,.25);padding:0;width:min(460px,92vw)}
   dialog .dlg{padding:18px}
   dialog h3{margin:0 0 10px}
-  dialog p{margin:8px 0}
   dialog .kv{display:grid;grid-template-columns:1fr auto;gap:6px;font-size:14px}
   dialog .kv div:last-child{font-weight:700}
   dialog .close{position:absolute;top:8px;right:10px;background:#fff;border:1px solid #e5e7eb;border-radius:8px;padding:4px 8px;cursor:pointer}
@@ -87,40 +84,25 @@
 <body>
 <header>
   <h1>Leadership — Participants & Calendar</h1>
-  <div class="controls card" style="padding:10px 12px">
-    <div>
-      <label for="view">Calendar view:&nbsp;</label>
-      <select id="view">
-        <option value="overall">Overall (3 dailies)</option>
-        <option value="Bible Reading">Bible Reading</option>
-        <option value="Morning Intimacy">Morning Intimacy</option>
-        <option value="Scripture Memorization">Scripture Memorization</option>
-      </select>
-    </div>
-    <div>
-      <label for="months">Months:&nbsp;</label>
-      <select id="months">
-        <option value="1">Current month</option>
-        <option value="2" selected>Last 2 months</option>
-        <option value="3">Last 3 months</option>
-      </select>
-    </div>
-    <span class="pill">Calendar shading = avg completion (partials included). Click a day for details.</span>
-  </div>
+  <div class="summary card" style="padding:8px 12px" id="succSummary">—</div>
 </header>
 
 <div class="wrap">
-  <!-- PARTICIPANT ACHIEVEMENT -->
+  <!-- PARTICIPANT ACHIEVEMENT (PAGINATED) -->
   <div class="card">
     <div class="leaderbar">
-      <h2 style="margin:0">Participant Achievement (Overall)</h2>
-      <div class="controls" style="gap:8px">
-        <input id="search" type="search" placeholder="Search participant…" />
-        <select id="sort">
-          <option value="pct">Sort by % (desc)</option>
-          <option value="name">Sort by name (A–Z)</option>
-        </select>
-        <span class="pill">Attainment = completed ÷ possible (all practices)</span>
+      <h2 style="margin:0">Overall Achievement per Participant</h2>
+      <div class="pager">
+        <button id="prevBtn">◀ Prev</button>
+        <span id="pageInfo">Page 1</span>
+        <button id="nextBtn">Next ▶</button>
+        <label style="margin-left:8px">Rows:
+          <select id="pageSize">
+            <option>3</option>
+            <option selected>4</option>
+            <option>5</option>
+          </select>
+        </label>
       </div>
     </div>
     <div id="leaderGrid" class="leadergrid"></div>
@@ -173,6 +155,7 @@ const FACT_CSV_URL =
   "https://docs.google.com/spreadsheets/d/e/2PACX-1vQERkbRqvUyktHeUw-DvLVNNIzvR50N0oHC-bpDwx6Lj33-o9uIiGN-ucd9r80Tq3l5_WroECTpI-gz/pub?gid=262595972&single=true&output=csv";
 const DAILY = new Set(["Bible Reading","Morning Intimacy","Scripture Memorization"]);
 const COLORS = ["var(--g0)","var(--g1)","var(--g2)","var(--g3)","var(--g4)","var(--g5)"];
+const TARGET = 0.94; // 94% threshold for success
 
 /* ========= HELPERS ========= */
 function csvToRows(text){
@@ -188,70 +171,69 @@ function ymd(d){ return d.toISOString().slice(0,10); }
 function parseDate(s){ const d=new Date(s); return isNaN(d)?null:d; }
 function clamp01(x){ return Math.max(0, Math.min(1, Number(x)||0)); }
 function pct(x){ return Math.round(x*1000)/10 + "%"; }
-function bucketColor(x){ const b = Math.max(0, Math.min(5, Math.floor(x*6))); return COLORS[b]; }
+function bucketColor(x){ const b=Math.max(0, Math.min(5, Math.floor(x*6))); return COLORS[b]; }
 function initials(nameOrEmail){
-  const s = (nameOrEmail||"").trim();
-  if (!s) return "—";
-  if (s.includes("@")) return s.slice(0,1).toUpperCase();
-  const parts = s.split(/\s+/).filter(Boolean);
-  if (parts.length===1) return parts[0].slice(0,2).toUpperCase();
+  const s=(nameOrEmail||"").trim();
+  if(!s) return "—";
+  if(s.includes("@")) return s.slice(0,1).toUpperCase();
+  const parts=s.split(/\s+/).filter(Boolean);
+  if(parts.length===1) return parts[0].slice(0,2).toUpperCase();
   return (parts[0][0]+parts[parts.length-1][0]).toUpperCase();
 }
 
 /* ========= DATA STATE ========= */
-let RAW = [];
-let aggByDay = {}; // date -> { nParticipants, R,I,M, overall }
-let board = [];    // [{pid, name, done, total, pct}]
+let RAW=[], aggByDay={}, board=[];
+let page=1, pageSize=4;
 
 /* ========= LOAD & AGGREGATE ========= */
 async function load(){
   const text = await fetch(FACT_CSV_URL + (FACT_CSV_URL.includes("?")?"&":"?") + "cb=" + Date.now()).then(r=>r.text());
   RAW = csvToRows(text);
 
-  // participant id + name helpers
   const getPid = (row)=>{
     const c = ["participant_id","Email Address","email","Email","email address"];
-    for (const k of c){ if (row[k] && row[k].trim()) return row[k].trim().toLowerCase(); }
+    for(const k of c){ if(row[k] && row[k].trim()) return row[k].trim().toLowerCase(); }
     return "";
   };
   const getName = (row)=>{
     const c = ["Name","Full Name","Participant","Participant Name","Email Address","email","Email"];
-    for (const k of c){ if (row[k] && row[k].trim()) return row[k].trim(); }
+    for(const k of c){ if(row[k] && row[k].trim()) return row[k].trim(); }
     return "";
   };
 
-  /* ----- Leaderboard (all practices) ----- */
+  // Leaderboard totals: all practices, partials included
   const totals = {}; // pid -> {done,total,name}
   RAW.forEach(r=>{
     const pid = getPid(r); if(!pid) return;
-    const val = Number(r.value || 0);
-    totals[pid] = totals[pid] || {done:0,total:0,name:getName(r) || pid};
-    totals[pid].done += val;
-    totals[pid].total += 1;
-    if (!totals[pid].name) totals[pid].name = getName(r) || pid;
+    const val = Number(r.value||0);
+    totals[pid] = totals[pid] || {done:0,total:0,name:getName(r)||pid};
+    totals[pid].done += val; totals[pid].total += 1;
+    if(!totals[pid].name) totals[pid].name = getName(r)||pid;
   });
 
-  board = Object.entries(totals).map(([pid, t])=>{
-    const pct = t.total ? (t.done / t.total) : 0;
+  board = Object.entries(totals).map(([pid,t])=>{
+    const pct = t.total ? (t.done/t.total) : 0;
     return {pid, name:t.name, done:t.done, total:t.total, pct};
   });
 
-  /* ----- Calendar aggregation (dailies) ----- */
-  const seen = new Map(); // pid|date|practice -> value 0..1 (max per day)
-  for (const r of RAW){
-    const prac = r.practice;
-    if (!DAILY.has(prac)) continue;
-    const pid = getPid(r); if (!pid) continue;
-    const d = parseDate(r.date || r.Date || r.date_str || ""); if (!d) continue;
-    const key = `${pid}|${ymd(d)}|${prac}`;
+  // Sort by % desc
+  board.sort((a,b)=> b.pct - a.pct);
+
+  // Calendar aggregation from dailies
+  const seen = new Map(); // pid|date|practice -> max value for that day
+  for(const r of RAW){
+    if(!DAILY.has(r.practice)) continue;
+    const pid = getPid(r); if(!pid) continue;
+    const d = parseDate(r.date || r.Date || r.date_str || ""); if(!d) continue;
+    const key = `${pid}|${ymd(d)}|${r.practice}`;
     const val = clamp01(r.value);
     seen.set(key, Math.max(val, seen.get(key)||0));
   }
 
   const byDayPrac = {}; // date -> practice -> {sum,count}
   const participantsPerDay = {};
-  for (const [k,v] of seen.entries()){
-    const [pid, date, prac] = k.split("|");
+  for(const [k,v] of seen.entries()){
+    const [pid,date,prac] = k.split("|");
     byDayPrac[date] = byDayPrac[date] || {};
     byDayPrac[date][prac] = byDayPrac[date][prac] || {sum:0,count:0};
     byDayPrac[date][prac].sum += v;
@@ -265,81 +247,158 @@ async function load(){
   const P = ["Bible Reading","Morning Intimacy","Scripture Memorization"];
   Object.keys(byDayPrac).forEach(date=>{
     const rec = {nParticipants: participantsPerDay[date]?.size || 0, R:0,I:0,M:0, overall:0};
-    const r = byDayPrac[date]["Bible Reading"];   rec.R = r ? (r.sum / r.count) : 0;
-    const i = byDayPrac[date]["Morning Intimacy"];rec.I = i ? (i.sum / i.count) : 0;
+    const r = byDayPrac[date]["Bible Reading"];    rec.R = r ? (r.sum / r.count) : 0;
+    const i = byDayPrac[date]["Morning Intimacy"]; rec.I = i ? (i.sum / i.count) : 0;
     const m = byDayPrac[date]["Scripture Memorization"]; rec.M = m ? (m.sum / m.count) : 0;
-    const present = P.map(p=>byDayPrac[date][p] ? 1 : 0);
+    const present = P.map(p=>byDayPrac[date][p]?1:0);
     const denom = present.reduce((a,b)=>a+b,0) || 3;
     rec.overall = (rec.R + rec.I + rec.M) / denom;
     aggByDay[date] = rec;
   });
+
+  renderSummary();
 }
 
-/* ========= RENDER: LEADERBOARD ========= */
+/* ========= RENDER SUMMARY (likelihood to hit 94%) ========= */
+function renderSummary(){
+  const total = board.length;
+  const likely = board.filter(b => b.pct >= TARGET).length; // projection = current pace
+  const pctLikely = total ? Math.round((likely/total)*1000)/10 : 0;
+  const el = document.getElementById("succSummary");
+  el.textContent = `Likelihood of Successful Completion (≥${Math.round(TARGET*100)}% pace): `
+                 + `${likely} / ${total} participants (${pctLikely}%).`;
+}
+
+/* ========= RENDER: LEADERBOARD (PAGINATED) ========= */
 const leaderGrid = document.getElementById("leaderGrid");
-const searchEl = document.getElementById("search");
-const sortEl   = document.getElementById("sort");
+const pageInfo = document.getElementById("pageInfo");
+const prevBtn = document.getElementById("prevBtn");
+const nextBtn = document.getElementById("nextBtn");
+const pageSizeSel = document.getElementById("pageSize");
 
 function badgeClass(p){
-  if (p >= 0.95) return "badge ok";
-  if (p >= 0.80) return "badge warn";
+  if (p >= TARGET) return "badge ok";
+  if (p >= 0.80)  return "badge warn";
   return "badge bad";
 }
-
 function renderLeaderboard(){
-  const q = (searchEl.value||"").toLowerCase();
-  let items = board.filter(b => b.name.toLowerCase().includes(q) || b.pid.includes(q));
+  pageSize = Number(pageSizeSel.value||4);
+  const pages = Math.max(1, Math.ceil(board.length / pageSize));
+  page = Math.max(1, Math.min(page, pages));
+  pageInfo.textContent = `Page ${page} / ${pages}`;
+  prevBtn.disabled = page<=1;
+  nextBtn.disabled = page>=pages;
 
-  if (sortEl.value==="name"){
-    items.sort((a,b)=> a.name.localeCompare(b.name));
-  } else {
-    items.sort((a,b)=> b.pct - a.pct);
-  }
+  const start = (page-1)*pageSize;
+  const items = board.slice(start, start+pageSize);
 
   leaderGrid.innerHTML = "";
   items.forEach(b=>{
-    const pctNum = Math.round(b.pct*1000)/10; // one decimal
-    const tile = document.createElement("div");
-    tile.className = "tile";
+    const pctNum = Math.round(b.pct*1000)/10;
+    const row = document.createElement("div"); row.className="row";
 
-    const av = document.createElement("div");
-    av.className = "avatar";
-    av.textContent = initials(b.name || b.pid);
+    const av = document.createElement("div"); av.className="avatar"; av.textContent = initials(b.name||b.pid);
 
     const mid = document.createElement("div");
-    const nm = document.createElement("div"); nm.className = "name"; nm.textContent = b.name || b.pid;
-    const meta = document.createElement("div"); meta.className="tmeta"; meta.textContent = b.pid;
-    const bar = document.createElement("div"); bar.className = "bar";
-    const fill = document.createElement("div"); fill.className = "fill"; fill.style.width = Math.min(100, Math.max(0,pctNum)) + "%";
+    const nm = document.createElement("div"); nm.className="name"; nm.textContent = b.name || b.pid;
+    const meta = document.createElement("div"); meta.className="meta"; meta.textContent = b.pid;
+    const bar = document.createElement("div"); bar.className="bar";
+    const fill = document.createElement("div"); fill.className="fill"; fill.style.width = Math.min(100, Math.max(0,pctNum)) + "%";
     bar.appendChild(fill);
     const ratio = document.createElement("div"); ratio.className="ratio"; ratio.textContent = `${Math.round(b.done)} / ${b.total} units`;
 
     mid.appendChild(nm); mid.appendChild(meta); mid.appendChild(bar); mid.appendChild(ratio);
 
-    const right = document.createElement("div");
+    const right = document.createElement("div"); right.className="right";
     const p = document.createElement("div"); p.className="pct"; p.textContent = pctNum + "%";
     const badge = document.createElement("div"); badge.className = badgeClass(b.pct);
-    badge.textContent = b.pct>=0.95 ? "On track" : (b.pct>=0.80 ? "Watch" : "At risk");
-    right.style.textAlign="right";
+    badge.textContent = b.pct>=TARGET ? "Likely to Complete" : (b.pct>=0.80 ? "Watch" : "At Risk");
     right.appendChild(p); right.appendChild(badge);
 
-    tile.appendChild(av); tile.appendChild(mid); tile.appendChild(right);
-    leaderGrid.appendChild(tile);
+    row.appendChild(av); row.appendChild(mid); row.appendChild(right);
+    leaderGrid.appendChild(row);
   });
 }
+prevBtn.addEventListener("click", ()=>{ page--; renderLeaderboard(); });
+nextBtn.addEventListener("click", ()=>{ page++; renderLeaderboard(); });
+pageSizeSel.addEventListener("change", ()=>{ page=1; renderLeaderboard(); });
 
 /* ========= RENDER: CALENDAR ========= */
 const calGrid = document.getElementById("calGrid");
 const rangeLabel = document.getElementById("rangeLabel");
-const viewSel = document.getElementById("view");
-const monthsSel = document.getElementById("months");
-const detail = document.getElementById("detail");
-const dlgDate = document.getElementById("dlgDate");
-const dlgN = document.getElementById("dlgN");
-const dlgOverall = document.getElementById("dlgOverall");
-const dlgR = document.getElementById("dlgR");
-const dlgI = document.getElementById("dlgI");
-const dlgM = document.getElementById("dlgM");
 
 function titleMonthRange(start, months){
-  const a = new Date(start), b = new Date(start); b.setMonth(b.
+  const a=new Date(start), b=new Date(start); b.setMonth(b.getMonth()+months-1);
+  const fmt = (d)=> d.toLocaleString(undefined,{month:"long", year:"numeric"});
+  return months===1 ? fmt(a) : `${fmt(a)} – ${fmt(b)}`;
+}
+function renderCalendar(){
+  const months = 2; // keep simple; adjust if you want a control again
+  const now = new Date();
+  const start = new Date(now.getFullYear(), now.getMonth() - (months-1), 1);
+  const startGrid = new Date(start); startGrid.setDate(1 - start.getDay());
+  const end = new Date(now.getFullYear(), now.getMonth()+1, 0);
+  const endGrid = new Date(end); endGrid.setDate(end.getDate() + (6 - end.getDay()));
+
+  rangeLabel.textContent = titleMonthRange(start, months);
+
+  calGrid.innerHTML = "";
+  for (let d = new Date(startGrid); d <= endGrid; d.setDate(d.getDate()+1)){
+    const dateStr = ymd(d);
+    const inMonth = (d >= start && d <= end);
+    const rec = aggByDay[dateStr] || {nParticipants:0,R:0,I:0,M:0,overall:0};
+    const v = rec.overall;
+
+    const cell = document.createElement("div");
+    cell.className = "cell" + (inMonth ? " in-month" : "");
+    const fill = document.createElement("div");
+    fill.className = "fillday";
+    fill.style.background = bucketColor(v);
+    cell.appendChild(fill);
+
+    const dateEl = document.createElement("div");
+    dateEl.className = "date"; dateEl.textContent = d.getDate();
+    cell.appendChild(dateEl);
+
+    const mini = document.createElement("div");
+    mini.className = "mini";
+    const rBar = document.createElement("div"); rBar.className = "r";
+    const iBar = document.createElement("div"); iBar.className = "i";
+    const mBar = document.createElement("div"); mBar.className = "m";
+    rBar.style.opacity = Math.max(.25, rec.R); iBar.style.opacity = Math.max(.25, rec.I); mBar.style.opacity = Math.max(.25, rec.M);
+    mini.appendChild(rBar); mini.appendChild(iBar); mini.appendChild(mBar);
+    cell.appendChild(mini);
+
+    const pctEl = document.createElement("div");
+    pctEl.className = "pctday"; pctEl.textContent = Math.round(v*100) + "%";
+    cell.appendChild(pctEl);
+
+    cell.title =
+      `${dateStr}\n`+
+      `Overall: ${pct(rec.overall)} (n=${rec.nParticipants})\n`+
+      `Reading: ${pct(rec.R)} • Intimacy: ${pct(rec.I)} • Memorization: ${pct(rec.M)}`;
+
+    cell.addEventListener("click", ()=>{
+      dlgDate.textContent = dateStr;
+      dlgN.textContent = String(rec.nParticipants);
+      dlgOverall.textContent = pct(rec.overall);
+      dlgR.textContent = pct(rec.R);
+      dlgI.textContent = pct(rec.I);
+      dlgM.textContent = pct(rec.M);
+      detail.showModal();
+    });
+
+    calGrid.appendChild(cell);
+  }
+}
+
+/* ========= BOOT ========= */
+(async function(){
+  await load();
+  renderSummary();
+  renderLeaderboard();
+  renderCalendar();
+})();
+</script>
+</body>
+</html>
