--- a/leadership_calendar.html
+++ b/leadership_calendar.html
@@ -6,7 +6,84 @@
 <title>Leadership — Community Overview</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
-/* Keep the same CSS as before — omitted here for brevity */
+  :root{
+    --bg:#f7f9fc; --card:#ffffff; --ink:#111827; --muted:#6b7280; --shadow:0 8px 24px rgba(0,0,0,.06);
+    --radius:16px; --read:#3b82f6; --intimacy:#06b6d4; --memory:#7c3aed;
+    --ok:#10b981; --warn:#f59e0b; --bad:#ef4444;
+    --g0:#eef2ff; --g1:#c7d2fe; --g2:#93c5fd; --g3:#60a5fa; --g4:#3b82f6; --g5:#1d4ed8;
+  }
+  *{box-sizing:border-box}
+  body{margin:0;background:var(--bg);color:var(--ink);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial}
+  header{padding:22px 24px 8px;display:flex;justify-content:space-between;align-items:end;gap:16px;flex-wrap:wrap}
+  header h1{margin:0;font-size:clamp(20px,3vw,28px)}
+  .wrap{padding:0 24px 40px;max-width:1200px;margin:0 auto}
+  .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:16px 16px 18px}
+  .summary{font-size:12px;color:var(--muted)}
+  .card h2{margin:0 0 10px;font-size:18px}
+  canvas{width:100%;height:auto;max-height:340px}
+
+  /* Leaderboard (paginated, no search) */
+  .leaderbar{display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;gap:10px;flex-wrap:wrap}
+  .leadergrid{display:grid;grid-template-columns:1fr;gap:10px}
+  .row{
+    border:1px solid #e5e7eb;border-radius:14px;padding:10px 12px;display:grid;
+    grid-template-columns: auto 1fr auto;gap:12px;align-items:center;
+  }
+  .avatar{
+    width:40px;height:40px;border-radius:50%;display:grid;place-items:center;
+    font-weight:800;color:#fff;background:linear-gradient(135deg,#64748b,#334155)
+  }
+  .name{font-weight:700}
+  .meta{font-size:12px;color:var(--muted)}
+  .bar{height:8px;border-radius:999px;background:#f1f5f9;overflow:hidden}
+  .fill{height:100%;background:linear-gradient(90deg,#a5b4fc,#4f46e5)}
+  .right{text-align:right}
+  .pct{font-weight:800}
+  .ratio{font-size:12px;color:#6b7280}
+  .badge{font-size:11px;border-radius:999px;border:1px solid #e5e7eb;padding:2px 8px;color:#374151;background:#fff;display:inline-block;margin-top:4px}
+  .ok{color:#065f46;border-color:#10b981;background:#e8f8ee}
+  .warn{color:#92400e;border-color:#f59e0b;background:#fff7e6}
+  .bad{color:#991b1b;border-color:#ef4444;background:#fdeaea}
+  .pager{display:flex;gap:8px;align-items:center}
+  .pager button, .pager select{
+    border:1px solid #e5e7eb;border-radius:10px;padding:6px 10px;background:#fff;cursor:pointer
+  }
+
+  /* Calendar */
+  .calendar{margin-top:16px}
+  .monthbar{display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;gap:10px;flex-wrap:wrap}
+  .monthbar h2{margin:0;font-size:18px}
+  .monthpager{display:flex;gap:8px;align-items:center}
+  .monthpager button{border:1px solid #e5e7eb;border-radius:10px;padding:6px 10px;background:#fff;cursor:pointer}
+  .legend{display:flex;align-items:center;gap:10px;flex-wrap:wrap}
+  .swatch{width:22px;height:12px;border-radius:4px;border:1px solid #e5e7eb}
+  .grad{display:flex;gap:4px;align-items:center}
+  .grad .swatch{width:16px}
+  .grid{display:grid;grid-template-columns:repeat(7,1fr);gap:6px}
+  .dow{font-size:11px;color:var(--muted);text-align:center;margin-bottom:6px}
+  .cell{
+    aspect-ratio:1; border-radius:10px; background:#f3f4f6; position:relative; overflow:hidden;
+    border:1px solid #e5e7eb; transition:transform .15s ease, box-shadow .15s ease;
+  }
+  .cell.in-month{background:#ffffff}
+  .cell:hover{transform:translateY(-2px);box-shadow:0 10px 22px rgba(0,0,0,.09)}
+  .date{position:absolute;top:6px;left:6px;font-size:11px;color:#6b7280;font-weight:600}
+  .fillday{position:absolute;inset:0;opacity:.88}
+  .pctday{position:absolute;right:6px;bottom:6px;font-size:12px;font-weight:800;color:#0b1020;text-shadow:0 1px 0 rgba(255,255,255,.6)}
+  .mini{position:absolute;left:6px;right:6px;bottom:24px;height:6px;display:grid;grid-template-columns:repeat(3,1fr);gap:3px}
+  .mini div{border-radius:2px;height:6px;opacity:.95}
+  .mini .r{background:var(--read)}
+  .mini .i{background:var(--intimacy)}
+  .mini .m{background:var(--memory)}
+  .foot{font-size:12px;color:var(--muted);margin-top:10px}
+
+  /* Modal */
+  dialog{border:none;border-radius:14px;box-shadow:0 24px 64px rgba(0,0,0,.25);padding:0;width:min(460px,92vw)}
+  dialog .dlg{padding:18px}
+  dialog h3{margin:0 0 10px}
+  dialog .kv{display:grid;grid-template-columns:1fr auto;gap:6px;font-size:14px}
+  dialog .kv div:last-child{font-weight:700}
+  dialog .close{position:absolute;top:8px;right:10px;background:#fff;border:1px solid #e5e7eb;border-radius:8px;padding:4px 8px;cursor:pointer}
 </style>
 </head>
 <body>
@@ -18,12 +95,10 @@
 <div class="wrap">
 
   <!-- 1: GROUP PRACTICE BALANCE (RADAR) -->
-  <section class="topgrid">
-    <div class="card">
-      <h2>Practice Balance (Radar) — Community</h2>
-      <canvas id="groupRadar"></canvas>
-      <div class="summary" id="radarNote"></div>
-    </div>
+  <section class="card">
+    <h2>Practice Balance (Radar) — Community</h2>
+    <canvas id="groupRadar"></canvas>
+    <div class="summary" id="radarNote"></div>
   </section>
 
   <!-- 2: PARTICIPANT ACHIEVEMENT (PAGINATED) -->
@@ -67,7 +142,6 @@
         <span>100%</span>
       </div>
     </div>
-
     <div class="grid" id="dowRow">
       <div class="dow">S</div><div class="dow">M</div><div class="dow">T</div>
       <div class="dow">W</div><div class="dow">T</div><div class="dow">F</div><div class="dow">S</div>
@@ -92,7 +166,293 @@
 </dialog>
 
 <script>
-/* Keep the same JavaScript as before — no changes needed */
+/* ========= CONFIG ========= */
+const FACT_CSV_URL =
+  "https://docs.google.com/spreadsheets/d/e/2PACX-1vQERkbRqvUyktHeUw-DvLVNNIzvR50N0oHC-bpDwx6Lj33-o9uIiGN-ucd9r80Tq3l5_WroECTpI-gz/pub?gid=262595972&single=true&output=csv";
+const DAILY = new Set(["Bible Reading","Morning Intimacy","Scripture Memorization"]);
+const COLORS = ["var(--g0)","var(--g1)","var(--g2)","var(--g3)","var(--g4)","var(--g5)"];
+const TARGET = 0.94;
+
+/* ========= HELPERS ========= */
+function csvToRows(text){
+  const lines = text.trim().split(/\r?\n/);
+  const header = lines.shift().split(",");
+  return lines.map(line=>{
+    const cols = line.split(/,(?=(?:[^"]*"[^"]*")*[^"]*$)/).map(s=>s.replace(/^"|"$/g,""));
+    const o={}; header.forEach((h,i)=>o[h.trim()]= (cols[i]||"").trim());
+    return o;
+  });
+}
+function ymd(d){ return d.toISOString().slice(0,10); }
+function parseDate(s){ const d=new Date(s); return isNaN(d)?null:d; }
+function clamp01(x){ return Math.max(0, Math.min(1, Number(x)||0)); }
+function pct(x){ return Math.round(x*1000)/10 + "%"; }
+function bucketColor(x){ const b=Math.max(0, Math.min(5, Math.floor(x*6))); return COLORS[b]; }
+function initials(nameOrEmail){
+  const s=(nameOrEmail||"").trim();
+  if(!s) return "—";
+  if(s.includes("@")) return s.slice(0,1).toUpperCase();
+  const parts=s.split(/\s+/).filter(Boolean);
+  if(parts.length===1) return parts[0].slice(0,2).toUpperCase();
+  return (parts[0][0]+parts[parts.length-1][0]).toUpperCase();
+}
+
+/* ========= DATA ========= */
+let RAW=[], aggByDay={}, board=[];
+let page=1, pageSize=4;
+let monthOffset=0;
+
+/* ========= LOAD ========= */
+async function load(){
+  const text = await fetch(FACT_CSV_URL + (FACT_CSV_URL.includes("?")?"&":"?") + "cb=" + Date.now()).then(r=>r.text());
+  RAW = csvToRows(text);
+
+  const getPid = (row)=>{
+    const c = ["participant_id","Email Address","email","Email","email address"];
+    for(const k of c){ if(row[k] && row[k].trim()) return row[k].trim().toLowerCase(); }
+    return "";
+  };
+  const getName = (row)=>{
+    const c = ["Name","Full Name","Participant","Participant Name","Email Address","email","Email"];
+    for(const k of c){ if(row[k] && row[k].trim()) return row[k].trim(); }
+    return "";
+  };
+
+  // Leaderboard totals (all practices)
+  const totals = {};
+  RAW.forEach(r=>{
+    const pid = getPid(r); if(!pid) return;
+    const val = Number(r.value||0);
+    totals[pid] = totals[pid] || {done:0,total:0,name:getName(r)||pid};
+    totals[pid].done += val; totals[pid].total += 1;
+  });
+  board = Object.entries(totals).map(([pid,t])=>({pid,name:t.name,done:t.done,total:t.total,pct:t.total?(t.done/t.total):0}))
+                                 .sort((a,b)=> b.pct - a.pct);
+
+  // Calendar aggregation (dailies)
+  const seen = new Map();
+  for(const r of RAW){
+    if(!DAILY.has(r.practice)) continue;
+    const pid = getPid(r); if(!pid) continue;
+    const d = parseDate(r.date || r.Date || r.date_str || ""); if(!d) continue;
+    const key = `${pid}|${ymd(d)}|${r.practice}`;
+    const val = clamp01(r.value);
+    seen.set(key, Math.max(val, seen.get(key)||0));
+  }
+  const byDayPrac = {}, participantsPerDay = {};
+  for(const [k,v] of seen.entries()){
+    const [pid,date,prac] = k.split("|");
+    byDayPrac[date] = byDayPrac[date] || {};
+    byDayPrac[date][prac] = byDayPrac[date][prac] || {sum:0,count:0};
+    byDayPrac[date][prac].sum += v; byDayPrac[date][prac].count += 1;
+    participantsPerDay[date] = participantsPerDay[date] || new Set(); participantsPerDay[date].add(pid);
+  }
+  aggByDay = {};
+  const P=["Bible Reading","Morning Intimacy","Scripture Memorization"];
+  Object.keys(byDayPrac).forEach(date=>{
+    const rec = {nParticipants: participantsPerDay[date]?.size || 0, R:0,I:0,M:0, overall:0};
+    const r=byDayPrac[date]["Bible Reading"];    rec.R = r ? (r.sum/r.count) : 0;
+    const i=byDayPrac[date]["Morning Intimacy"]; rec.I = i ? (i.sum/i.count) : 0;
+    const m=byDayPrac[date]["Scripture Memorization"]; rec.M = m ? (m.sum/m.count) : 0;
+    const present = P.map(p=>byDayPrac[date][p]?1:0);
+    const denom = present.reduce((a,b)=>a+b,0) || 3;
+    rec.overall = (rec.R + rec.I + rec.M) / denom;
+    aggByDay[date] = rec;
+  });
+
+  // Group radar aggregation
+  buildGroupRadar(RAW);
+
+  renderSummary();
+}
+
+/* ========= SUMMARY (≥94% pace) ========= */
+function renderSummary(){
+  const total = board.length;
+  const likely = board.filter(b => b.pct >= TARGET).length;
+  const pctLikely = total ? Math.round((likely/total)*1000)/10 : 0;
+  document.getElementById("succSummary").textContent =
+    `Likelihood of Successful Completion (≥${Math.round(TARGET*100)}% pace): ${likely} / ${total} participants (${pctLikely}%).`;
+}
+
+/* ========= GROUP RADAR ========= */
+let radarChart=null;
+function buildGroupRadar(rows){
+  const byPractice = {}; // practice -> {done,total}
+  rows.forEach(r=>{
+    const p = r.practice || "Unknown";
+    const v = Number(r.value||0);
+    byPractice[p] = byPractice[p] || {done:0,total:0};
+    byPractice[p].done += v; byPractice[p].total += 1;
+  });
+
+  const labels = Object.keys(byPractice).sort();
+  const dataPct = labels.map(k => {
+    const t = byPractice[k]; return t.total ? (t.done/t.total*100) : 0;
+  });
+
+  const ctx = document.getElementById("groupRadar").getContext("2d");
+  if (radarChart) radarChart.destroy();
+  radarChart = new Chart(ctx, {
+    type: "radar",
+    data: {
+      labels,
+      datasets: [{
+        label: "% Attainment by Practice",
+        data: dataPct,
+        borderWidth: 2,
+        pointRadius: 3,
+        backgroundColor: "rgba(59,130,246,.15)",
+        borderColor: "rgba(59,130,246,.9)"
+      }]
+    },
+    options: {
+      responsive: true,
+      scales: { r:{ suggestedMin:0, suggestedMax:100, ticks:{ stepSize:20 } } },
+      plugins:{ legend:{ display:true } }
+    }
+  });
+
+  let weakest = null, weakestVal = 101, strongest = null, strongestVal = -1;
+  labels.forEach((k,i)=>{
+    if (dataPct[i] < weakestVal){ weakestVal = dataPct[i]; weakest = k; }
+    if (dataPct[i] > strongestVal){ strongestVal = dataPct[i]; strongest = k; }
+  });
+  document.getElementById("radarNote").textContent =
+    `Community balance — Strongest: ${strongest} (${Math.round(strongestVal)}%). Weakest: ${weakest} (${Math.round(weakestVal)}%).`;
+}
+
+/* ========= LEADERBOARD (pagination) ========= */
+const leaderGrid = document.getElementById("leaderGrid");
+const pageInfo = document.getElementById("pageInfo");
+const prevBtn = document.getElementById("prevBtn");
+const nextBtn = document.getElementById("nextBtn");
+const pageSizeSel = document.getElementById("pageSize");
+
+function badgeClass(p){
+  if (p >= TARGET) return "badge ok";
+  if (p >= 0.80)  return "badge warn";
+  return "badge bad";
+}
+function renderLeaderboard(){
+  const size = Number(pageSizeSel.value||4);
+  pageSize = size;
+  const pages = Math.max(1, Math.ceil(board.length / pageSize));
+  page = Math.max(1, Math.min(page, pages));
+  pageInfo.textContent = `Page ${page} / ${pages}`;
+  prevBtn.disabled = page<=1; nextBtn.disabled = page>=pages;
+
+  const items = board.slice((page-1)*pageSize, (page-1)*pageSize + pageSize);
+  leaderGrid.innerHTML = "";
+  items.forEach(b=>{
+    const pctNum = Math.round(b.pct*1000)/10;
+    const row = document.createElement("div"); row.className="row";
+
+    const av = document.createElement("div"); av.className="avatar"; av.textContent = initials(b.name||b.pid);
+
+    const mid = document.createElement("div");
+    const nm = document.createElement("div"); nm.className="name"; nm.textContent = b.name || b.pid;
+    const meta = document.createElement("div"); meta.className="meta"; meta.textContent = b.pid;
+    const bar = document.createElement("div"); bar.className="bar";
+    const fill = document.createElement("div"); fill.className="fill"; fill.style.width = Math.min(100, Math.max(0,pctNum)) + "%";
+    bar.appendChild(fill);
+    const ratio = document.createElement("div"); ratio.className="ratio"; ratio.textContent = `${Math.round(b.done)} / ${b.total} units`;
+
+    mid.appendChild(nm); mid.appendChild(meta); mid.appendChild(bar); mid.appendChild(ratio);
+
+    const right = document.createElement("div"); right.className="right";
+    const p = document.createElement("div"); p.className="pct"; p.textContent = pctNum + "%";
+    const badge = document.createElement("div"); badge.className = badgeClass(b.pct);
+    badge.textContent = b.pct>=TARGET ? "Likely to Complete" : (b.pct>=0.80 ? "Watch" : "At Risk");
+    right.appendChild(p); right.appendChild(badge);
+
+    row.appendChild(av); row.appendChild(mid); row.appendChild(right);
+    leaderGrid.appendChild(row);
+  });
+}
+prevBtn.addEventListener("click", ()=>{ page--; renderLeaderboard(); });
+nextBtn.addEventListener("click", ()=>{ page++; renderLeaderboard(); });
+pageSizeSel.addEventListener("change", ()=>{ page=1; renderLeaderboard(); });
+
+/* ========= CALENDAR (one month, month-to-month pager) ========= */
+const calGrid   = document.getElementById("calGrid");
+const rangeLabel= document.getElementById("rangeLabel");
+const calPrev   = document.getElementById("calPrev");
+const calNext   = document.getElementById("calNext");
+
+function monthTitle(y,m){ return new Date(y,m,1).toLocaleString(undefined,{month:"long",year:"numeric"}); }
+
+function renderCalendar(){
+  const base = new Date();
+  const year = base.getFullYear();
+  const monthIndex = base.getMonth() + monthOffset;
+
+  const start = new Date(year, monthIndex, 1);
+  const end   = new Date(year, monthIndex + 1, 0);
+  const startGrid = new Date(start); startGrid.setDate(1 - start.getDay());
+  const endGrid   = new Date(end);   endGrid.setDate(end.getDate() + (6 - end.getDay()));
+
+  rangeLabel.textContent = monthTitle(start.getFullYear(), start.getMonth());
+
+  calGrid.innerHTML = "";
+  for (let d = new Date(startGrid); d <= endGrid; d.setDate(d.getDate()+1)){
+    const dateStr = ymd(d);
+    const inMonth = (d >= start && d <= end);
+    const rec = aggByDay[dateStr] || {nParticipants:0,R:0,I:0,M:0,overall:0};
+    const v = rec.overall;
+
+    const cell = document.createElement("div");
+    cell.className = "cell" + (inMonth ? " in-month" : "");
+    const fill = document.createElement("div");
+    fill.className = "fillday";
+    fill.style.background = bucketColor(v);
+    cell.appendChild(fill);
+
+    const dateEl = document.createElement("div");
+    dateEl.className = "date"; dateEl.textContent = d.getDate();
+    cell.appendChild(dateEl);
+
+    const mini = document.createElement("div");
+    mini.className = "mini";
+    const rBar = document.createElement("div"); rBar.className = "r";
+    const iBar = document.createElement("div"); iBar.className = "i";
+    const mBar = document.createElement("div"); mBar.className = "m";
+    rBar.style.opacity = Math.max(.25, rec.R); iBar.style.opacity = Math.max(.25, rec.I); mBar.style.opacity = Math.max(.25, rec.M);
+    mini.appendChild(rBar); mini.appendChild(iBar); mini.appendChild(mBar);
+    cell.appendChild(mini);
+
+    const pctEl = document.createElement("div");
+    pctEl.className = "pctday"; pctEl.textContent = Math.round(v*100) + "%";
+    cell.appendChild(pctEl);
+
+    cell.title =
+      `${dateStr}\n`+
+      `Overall: ${pct(rec.overall)} (n=${rec.nParticipants})\n`+
+      `Reading: ${pct(rec.R)} • Intimacy: ${pct(rec.I)} • Memorization: ${pct(rec.M)}`;
+
+    cell.addEventListener("click", ()=>{
+      dlgDate.textContent = dateStr;
+      dlgN.textContent = String(rec.nParticipants);
+      dlgOverall.textContent = pct(rec.overall);
+      dlgR.textContent = pct(rec.R);
+      dlgI.textContent = pct(rec.I);
+      dlgM.textContent = pct(rec.M);
+      detail.showModal();
+    });
+
+    calGrid.appendChild(cell);
+  }
+}
+calPrev.addEventListener("click", ()=>{ monthOffset -= 1; renderCalendar(); });
+calNext.addEventListener("click", ()=>{ monthOffset += 1; renderCalendar(); });
+
+/* ========= BOOT ========= */
+(async function(){
+  await load();
+  renderSummary();
+  renderLeaderboard();
+  renderCalendar();
+})();
 </script>
 </body>
 </html>
